test pause/resume to camera

--- a/app/src/main/res/layout/camera_frag.xml
+++ b/app/src/main/res/layout/camera_frag.xml
@@ -6,6 +6,8 @@
               android:layout_height="match_parent">
 
     <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -23,6 +25,14 @@
                 android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
     </LinearLayout>
+
+    <Button
+            android:layout_margin="20dp"
+            android:id="@+id/test_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/zxing_custom_possible_result_points"
+            android:text="Pause"/>
 
 
     <LinearLayout
