--- a/app/src/main/res/layout/packing_fragment.xml
+++ b/app/src/main/res/layout/packing_fragment.xml
@@ -42,7 +42,7 @@
                 android:textStyle="bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="HU on forklift"/>
+                android:text="HU on Stock"/>
 
         <ImageView
                 android:src="@drawable/bin"
